# BaseCalculator

./: .gitignore  README.md  pyproject.toml
.github/: README.md
src/basecalculator/: __about__.py  __init__.py  __main__.py  calc.py  settings.py
src/basecalculator/data/locales/en/LC_MESSAGES/: app.mo  app.po  pages.po  settings.mo  settings.po
src/basecalculator/data/locales/ru/LC_MESSAGES/: app.mo  app.po  pages.mo  pages.po  settings.mo  settings.po
src/basecalculator/graph/: app.py  graph_calc.py  pages.py  settings.py
src/basecalculator/graph/data/themes/: dark.json  kids.json  light.json
tests/: test_calc.py
