[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basecalculator"
dynamic = ["version"]
description = 'Calculator with base functional'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Dimasneas", email = "dima@dglushenkov.ru" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Dimasneas/basecalculator#readme"
Issues = "https://github.com/Dimasneas/basecalculator/issues"
Source = "https://github.com/Dimasneas/basecalculator"

[tool.hatch.version]
path = "src/basecalculator/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/basecalculator tests}"

[tool.coverage.run]
source_pkgs = ["basecalculator", "tests"]
branch = true
parallel = true
omit = [
  "src/basecalculator/__about__.py",
]

[tool.coverage.paths]
basecalculator = ["src/basecalculator", "*/basecalculator/src/basecalculator"]
tests = ["tests", "*/basecalculator/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]
